# packt-workshop-mcpapps

./: .gitignore  README.md
docker/: .env.example  .gitignore  README.md  docker-compose.yml
docker/keycloak/import/: mcp-realm.json
docker/workshop/: Dockerfile  entrypoint.sh
modules/02-architecture/: README.md
modules/02-architecture/mcp-server/: main.py  pyproject.toml  server.py
modules/02-architecture/mcp-server/assets/: basic_add.html
modules/02-architecture/mcp-server/resources/: config.json  info.txt
modules/02-architecture/view/: index.html  package-lock.json  package.json  vite.config.ts
modules/02-architecture/view/src/: global.css  mcp-app.tsx
modules/04-fridge/: README.md
modules/04-fridge/mcp-server/: pyproject.toml  server.py
modules/04-fridge/mcp-server/assets/: fridge.html
modules/04-fridge/view/: package-lock.json  package.json
modules/04-fridge/view/src/: global.css  mcp-app.tsx
modules/05-testing-evaluation/: .env.example  README.md  mcp-agent.config.yaml  pyproject.toml
modules/05-testing-evaluation/evals/: mcp-eval.config.json  test_server_eval.py
modules/05-testing-evaluation/tests/: conftest.py  test_prompts.py  test_resources.py  test_tools.py
modules/06-security/: README.md  docker-compose.yml
modules/06-security/keycloak/: realm-export.json
modules/06-security/mcp-server/: fridge.json  main.py  pyproject.toml  server.py  token_verifier.py
modules/06-security/mcp-server/assets/: fridge.html
modules/06-security/view/: index.html  tsconfig.json  vite.config.ts
modules/06-security/view/src/: mcp-app.tsx
